--- a/css/styles.css
+++ b/css/styles.css
@@ -129,10 +129,13 @@ body, html {
   }
   
   .close-btn {
-    position: absolute;
-    top: 5%; right: 5%;
+    position: relative;
+    top: 0; left: 95%;
     font-size: 2rem;
     color: white;
+    background: rgba(255, 27, 27, 0.5);
+    border-radius: 30px;
+    max-width: 35px;
     cursor: pointer;
     z-index: 1000;
   }
@@ -145,9 +148,9 @@ body, html {
   /* Textbox */
   .text-box {
     position: absolute;
-    bottom: 2rem;
-    left: 2rem;
-    right: 2rem;
+    bottom: 5rem;
+    left: 5rem;
+    right: 5rem;
     background: rgba(255, 255, 255, 0.9);
     padding: 1.2rem;
     border-radius: 12px;
@@ -155,6 +158,7 @@ body, html {
     color: #333;
     z-index: 3;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    text-align: center;
   }
   
   /* Toggle switch */
