--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     background: #ffffff;
     width: 100vw; /* Full viewport width */
     height: 100vh; /* Full viewport height */
-    overflow:hidden; /* Allow vertical scroll, prevent horizontal */
+    overflow:scroll; /* Allow vertical scroll, prevent horizontal */
 
     /*added for arrows*/
     display: flex; /* Use flexbox for layout */
@@ -450,7 +450,7 @@ body {
 
 
 .arrow {
-    position: absolute;
+    position: fixed;
     top: 40%;
     transform: translateY(-50%);
     /*sizing arrows*/
@@ -518,8 +518,8 @@ body {
 /* Progress bar pages: Dots (inside text-box) */
 .progress-bar {
     /* Positioning */
-    position: absolute;
-    bottom: 8.6rem;
+    position: fixed;
+    bottom: 4rem;
     left: 50%;
     transform: translateX(-50%);
     z-index: 600; /* Ensures it's on top of other content */
