--- a/css/styles.css
+++ b/css/styles.css
@@ -446,8 +446,7 @@ body {
 
 /*--------------------------*/
 
-
-
+/* NAVIGATION arrows */
 .arrow {
     position: fixed;
     top: 50%;
@@ -469,7 +468,7 @@ body {
 
     .arrow:hover {
     /* opacity: 0.7; Make the icon itself translucent */
-    transform: translateY(-50%) scale(1.05); /* Slightly enlarge on hover */
+    transform: translateY(-50%) scale(1.1); /* Slightly enlarge on hover */
 }
 
 
