--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ body {
   box-sizing: border-box; /* Ensures padding is included in the width/height */
 }
 
+
+
 /* 1. Logo Menu Button */
 .logo-menu-button {
   display: block; /* Allows setting height/width */
@@ -145,7 +147,7 @@ body {
             align-items: center;    /* Vertically align the logo and the content stack */
             justify-content: center;/* Center the whole two-column group on the page */
             gap: 50px;              /* Create a gap between the logo and the content stack */
-            
+            margin-top: 10vh; /* Space below the header */
             flex-grow: 1; /* Allow it to fill the vertical space */
             padding: 20px;
             height: 100%;
@@ -179,6 +181,17 @@ body {
         .intro-text {
             /* Use clamp() for fluid font size again */
             font-size: clamp(1rem, 2.5vw, 1.25rem); /* Scales between 16px and 20px */
+            color: #1A4651;
+            line-height: 1.6;
+            font-weight: 500;
+            max-width: 60ch; /* Use 'ch' unit to cap line-length for readability */
+            text-align: center; /* Recommended for centered layouts */
+            margin-bottom: 0px;
+            
+        }
+        .main-content h4 {
+            /* Use clamp() for fluid font size again */
+            font-size: clamp(0.5rem, 2.5vw, 1rem); /* Scales between 16px and 20px */
             color: #1A4651;
             line-height: 1.6;
             font-weight: 500;
