--- a/css/styles.css
+++ b/css/styles.css
@@ -1170,8 +1170,8 @@ color: #000;
 /* FOR SURGERY PAGES */
 
 .page-content-title { /* Changed class name */
-  position: fixed;
-  top: 80px; /* Adjust as needed */
+  position: relative;
+  top: 12vh; /* Adjust as needed */
   left: 50%;
   transform: translateX(-50%);
   width: 40%;
@@ -1182,12 +1182,12 @@ color: #000;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 8px;
-  padding: 2vh; /*Add some padding for better readability*/
+  margin-top: 2vh; /*Add some padding for better readability*/
 }
 
 .page-content-description { /* Changed class name */
   position: relative;
-  top: 150px; /* Adjust to be below the title */
+  top: 15vh; /* Adjust to be below the title */
   left: 50%;
   transform: translateX(-50%);
   width: 70vw;
@@ -1197,7 +1197,6 @@ color: #000;
   z-index: 3;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 8px;
-  margin-top: 5vh; /*Add some padding for better readability */
 }
 
 
