--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     background: #ffffff;
     width: 100; /* Full viewport width */
     height: 100; /* Full viewport height */
-    overflow-y:scroll; /* Allow vertical scroll, prevent horizontal */
+    overflow-y:hidden; /* Allow vertical scroll, prevent horizontal */
 
     /*added for arrows*/
     display: flex; /* Use flexbox for layout */
