--- a/css/styles.css
+++ b/css/styles.css
@@ -388,10 +388,10 @@ body {
 }
  
 .background-img {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
     z-index: 0; /* Ensure it's behind content */
 }
 /* NEED FOR  background image and chapter changes FOR CHAPTER 2*/
@@ -482,13 +482,13 @@ body {
     bottom: 6rem; /* Adjust if it overlaps with new nav bar */
     left: 50%;
     transform: translateX(-50%);
-    width: calc(100% - 6rem); /* Max width with padding */
+    width: calc(100vw - 16vw); /* Max width with padding */
     /* Max width for readability */
     background: #E1F3F4;
     border: 5px solid #457885; 
-    padding: 2rem;
+    padding:4vh;
     border-radius: 2rem;
-    font-size: 1.2rem; /* Scalable font size */
+    font-size: 1.8vw; /* Scalable font size */
     color: #1A4651;
     z-index: 3; /* Above background image */
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
