--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,7 @@ body {
  
 .background-img {
     position: fixed;
+    top: 4vh; /* Adjusted to account for the top bar */
     width: 100%;
     height: 100%;
     object-fit:cover;
