--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ body {
         }
 
         /* logo */
-        .main-icon {
+        #Logo {
             width: 25vw; /* Adjust as needed */
             max-width: 350px; /* Limit maximum width */
             min-width: 150px;
